--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "fetch-ie8": "^1.4.3",
     "material-ui": "0.15.4",
     "node-sass": "^3.8.0",
     "react": "^15.1.0",
